src/main/java/com/example/traductor/TraductorParser.java
// Generated from Traductor.g4 by ANTLR 4.7.2
package com.example.traductor;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TraductorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, FLOAT=11, INT=12, VOID=13, MAIN=14, NUM=15, IMPRIMIR=16, MUL=17, 
		DIV=18, SUMA=19, RESTA=20, PONTENCIA=21, TRUE=22, FALSE=23, MAYOR=24, 
		MENOR=25, MAYORIG=26, MENORIG=27, DIF=28, IGUAL=29, AND=30, OR=31, ID=32, 
		STRING=33, COM=34, WS=35;
	public static final int
		RULE_calculadora = 0, RULE_abrirll = 1, RULE_numfloat = 2, RULE_numInt = 3, 
		RULE_cll = 4, RULE_cabeza = 5, RULE_declaracion = 6, RULE_decla = 7, RULE_asignacion = 8, 
		RULE_impresion = 9, RULE_contenido = 10, RULE_condicionalIf = 11, RULE_condicionalelse = 12, 
		RULE_condicionalelseif = 13, RULE_condicionalfor = 14, RULE_condicion = 15, 
		RULE_express = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"calculadora", "abrirll", "numfloat", "numInt", "cll", "cabeza", "declaracion", 
			"decla", "asignacion", "impresion", "contenido", "condicionalIf", "condicionalelse", 
			"condicionalelseif", "condicionalfor", "condicion", "express"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "';'", "'}'", "'('", "')'", "'='", "'if'", "'else'", "'++'", 
			"'--'", "'float'", "'int'", "'void'", "'main'", null, "'printf'", "'*'", 
			"'/'", "'+'", "'-'", "'^'", "'true'", "'false'", "'>'", "'<'", "'>='", 
			"'<='", "'!='", "'=='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "FLOAT", 
			"INT", "VOID", "MAIN", "NUM", "IMPRIMIR", "MUL", "DIV", "SUMA", "RESTA", 
			"PONTENCIA", "TRUE", "FALSE", "MAYOR", "MENOR", "MAYORIG", "MENORIG", 
			"DIF", "IGUAL", "AND", "OR", "ID", "STRING", "COM", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Traductor.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TraductorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CalculadoraContext extends ParserRuleContext {
		public CalculadoraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_calculadora; }
	 
		public CalculadoraContext() { }
		public void copyFrom(CalculadoraContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ContContext extends CalculadoraContext {
		public CabezaContext cabeza() {
			return getRuleContext(CabezaContext.class,0);
		}
		public AbrirllContext abrirll() {
			return getRuleContext(AbrirllContext.class,0);
		}
		public ContenidoContext contenido() {
			return getRuleContext(ContenidoContext.class,0);
		}
		public CllContext cll() {
			return getRuleContext(CllContext.class,0);
		}
		public TerminalNode EOF() { return getToken(TraductorParser.EOF, 0); }
		public ContContext(CalculadoraContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitCont(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CalculadoraContext calculadora() throws RecognitionException {
		CalculadoraContext _localctx = new CalculadoraContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_calculadora);
		try {
			_localctx = new ContContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			cabeza();
			setState(35);
			abrirll();
			setState(36);
			contenido();
			setState(37);
			cll();
			setState(38);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbrirllContext extends ParserRuleContext {
		public AbrirllContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abrirll; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitAbrirll(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AbrirllContext abrirll() throws RecognitionException {
		AbrirllContext _localctx = new AbrirllContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_abrirll);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumfloatContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(TraductorParser.FLOAT, 0); }
		public TerminalNode ID() { return getToken(TraductorParser.ID, 0); }
		public NumfloatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numfloat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitNumfloat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumfloatContext numfloat() throws RecognitionException {
		NumfloatContext _localctx = new NumfloatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_numfloat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(FLOAT);
			setState(43);
			match(ID);
			setState(44);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumIntContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(TraductorParser.INT, 0); }
		public TerminalNode ID() { return getToken(TraductorParser.ID, 0); }
		public NumIntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numInt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitNumInt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumIntContext numInt() throws RecognitionException {
		NumIntContext _localctx = new NumIntContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_numInt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(INT);
			setState(47);
			match(ID);
			setState(48);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CllContext extends ParserRuleContext {
		public CllContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cll; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitCll(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CllContext cll() throws RecognitionException {
		CllContext _localctx = new CllContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cll);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CabezaContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(TraductorParser.VOID, 0); }
		public TerminalNode MAIN() { return getToken(TraductorParser.MAIN, 0); }
		public CabezaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabeza; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitCabeza(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CabezaContext cabeza() throws RecognitionException {
		CabezaContext _localctx = new CabezaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cabeza);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(VOID);
			setState(53);
			match(MAIN);
			setState(54);
			match(T__3);
			setState(55);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
	 
		public DeclaracionContext() { }
		public void copyFrom(DeclaracionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NumflotContext extends DeclaracionContext {
		public NumfloatContext numfloat() {
			return getRuleContext(NumfloatContext.class,0);
		}
		public NumflotContext(DeclaracionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitNumflot(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NuminContext extends DeclaracionContext {
		public NumIntContext numInt() {
			return getRuleContext(NumIntContext.class,0);
		}
		public NuminContext(DeclaracionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitNumin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaracion);
		try {
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				_localctx = new NuminContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				numInt();
				}
				break;
			case FLOAT:
				_localctx = new NumflotContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				numfloat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaContext extends ParserRuleContext {
		public DeclaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decla; }
	 
		public DeclaContext() { }
		public void copyFrom(DeclaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclaracionIntContext extends DeclaContext {
		public TerminalNode INT() { return getToken(TraductorParser.INT, 0); }
		public TerminalNode ID() { return getToken(TraductorParser.ID, 0); }
		public ExpressContext express() {
			return getRuleContext(ExpressContext.class,0);
		}
		public DeclaracionIntContext(DeclaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitDeclaracionInt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclaracionFloatContext extends DeclaContext {
		public TerminalNode FLOAT() { return getToken(TraductorParser.FLOAT, 0); }
		public TerminalNode ID() { return getToken(TraductorParser.ID, 0); }
		public ExpressContext express() {
			return getRuleContext(ExpressContext.class,0);
		}
		public DeclaracionFloatContext(DeclaContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitDeclaracionFloat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaContext decla() throws RecognitionException {
		DeclaContext _localctx = new DeclaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_decla);
		try {
			setState(73);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FLOAT:
				_localctx = new DeclaracionFloatContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				match(FLOAT);
				setState(62);
				match(ID);
				setState(63);
				match(T__5);
				setState(64);
				express(0);
				setState(65);
				match(T__1);
				}
				break;
			case INT:
				_localctx = new DeclaracionIntContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				match(INT);
				setState(68);
				match(ID);
				setState(69);
				match(T__5);
				setState(70);
				express(0);
				setState(71);
				match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	 
		public AsignacionContext() { }
		public void copyFrom(AsignacionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AsigContext extends AsignacionContext {
		public TerminalNode ID() { return getToken(TraductorParser.ID, 0); }
		public ExpressContext express() {
			return getRuleContext(ExpressContext.class,0);
		}
		public AsigContext(AsignacionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitAsig(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_asignacion);
		try {
			_localctx = new AsigContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(75);
			match(ID);
			setState(76);
			match(T__5);
			setState(77);
			express(0);
			}
			setState(79);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImpresionContext extends ParserRuleContext {
		public ImpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impresion; }
	 
		public ImpresionContext() { }
		public void copyFrom(ImpresionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImprContext extends ImpresionContext {
		public TerminalNode IMPRIMIR() { return getToken(TraductorParser.IMPRIMIR, 0); }
		public ExpressContext express() {
			return getRuleContext(ExpressContext.class,0);
		}
		public TerminalNode STRING() { return getToken(TraductorParser.STRING, 0); }
		public ImprContext(ImpresionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitImpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImpresionContext impresion() throws RecognitionException {
		ImpresionContext _localctx = new ImpresionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_impresion);
		try {
			_localctx = new ImprContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(IMPRIMIR);
			setState(82);
			match(T__3);
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUM:
			case ID:
				{
				setState(83);
				express(0);
				}
				break;
			case STRING:
				{
				setState(84);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(87);
			match(T__4);
			setState(88);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContenidoContext extends ParserRuleContext {
		public List<ExpressContext> express() {
			return getRuleContexts(ExpressContext.class);
		}
		public ExpressContext express(int i) {
			return getRuleContext(ExpressContext.class,i);
		}
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public List<DeclaContext> decla() {
			return getRuleContexts(DeclaContext.class);
		}
		public DeclaContext decla(int i) {
			return getRuleContext(DeclaContext.class,i);
		}
		public List<AsignacionContext> asignacion() {
			return getRuleContexts(AsignacionContext.class);
		}
		public AsignacionContext asignacion(int i) {
			return getRuleContext(AsignacionContext.class,i);
		}
		public List<ImpresionContext> impresion() {
			return getRuleContexts(ImpresionContext.class);
		}
		public ImpresionContext impresion(int i) {
			return getRuleContext(ImpresionContext.class,i);
		}
		public List<CondicionalIfContext> condicionalIf() {
			return getRuleContexts(CondicionalIfContext.class);
		}
		public CondicionalIfContext condicionalIf(int i) {
			return getRuleContext(CondicionalIfContext.class,i);
		}
		public List<CondicionalforContext> condicionalfor() {
			return getRuleContexts(CondicionalforContext.class);
		}
		public CondicionalforContext condicionalfor(int i) {
			return getRuleContext(CondicionalforContext.class,i);
		}
		public ContenidoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contenido; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitContenido(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContenidoContext contenido() throws RecognitionException {
		ContenidoContext _localctx = new ContenidoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_contenido);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__6) | (1L << FLOAT) | (1L << INT) | (1L << NUM) | (1L << IMPRIMIR) | (1L << ID))) != 0)) {
				{
				setState(97);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(90);
					express(0);
					}
					break;
				case 2:
					{
					setState(91);
					declaracion();
					}
					break;
				case 3:
					{
					setState(92);
					decla();
					}
					break;
				case 4:
					{
					setState(93);
					asignacion();
					}
					break;
				case 5:
					{
					setState(94);
					impresion();
					}
					break;
				case 6:
					{
					setState(95);
					condicionalIf();
					}
					break;
				case 7:
					{
					setState(96);
					condicionalfor();
					}
					break;
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionalIfContext extends ParserRuleContext {
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public AbrirllContext abrirll() {
			return getRuleContext(AbrirllContext.class,0);
		}
		public ContenidoContext contenido() {
			return getRuleContext(ContenidoContext.class,0);
		}
		public CllContext cll() {
			return getRuleContext(CllContext.class,0);
		}
		public List<CondicionalelseifContext> condicionalelseif() {
			return getRuleContexts(CondicionalelseifContext.class);
		}
		public CondicionalelseifContext condicionalelseif(int i) {
			return getRuleContext(CondicionalelseifContext.class,i);
		}
		public CondicionalelseContext condicionalelse() {
			return getRuleContext(CondicionalelseContext.class,0);
		}
		public CondicionalIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicionalIf; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitCondicionalIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionalIfContext condicionalIf() throws RecognitionException {
		CondicionalIfContext _localctx = new CondicionalIfContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_condicionalIf);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__6);
			setState(103);
			match(T__3);
			setState(104);
			condicion(0);
			setState(105);
			match(T__4);
			setState(106);
			abrirll();
			setState(107);
			contenido();
			setState(108);
			cll();
			setState(112);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(109);
					condicionalelseif();
					}
					} 
				}
				setState(114);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(115);
				condicionalelse();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionalelseContext extends ParserRuleContext {
		public AbrirllContext abrirll() {
			return getRuleContext(AbrirllContext.class,0);
		}
		public ContenidoContext contenido() {
			return getRuleContext(ContenidoContext.class,0);
		}
		public CllContext cll() {
			return getRuleContext(CllContext.class,0);
		}
		public CondicionalelseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicionalelse; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitCondicionalelse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionalelseContext condicionalelse() throws RecognitionException {
		CondicionalelseContext _localctx = new CondicionalelseContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_condicionalelse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(T__7);
			setState(119);
			abrirll();
			setState(120);
			contenido();
			setState(121);
			cll();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionalelseifContext extends ParserRuleContext {
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public AbrirllContext abrirll() {
			return getRuleContext(AbrirllContext.class,0);
		}
		public ContenidoContext contenido() {
			return getRuleContext(ContenidoContext.class,0);
		}
		public CllContext cll() {
			return getRuleContext(CllContext.class,0);
		}
		public CondicionalelseifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicionalelseif; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitCondicionalelseif(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionalelseifContext condicionalelseif() throws RecognitionException {
		CondicionalelseifContext _localctx = new CondicionalelseifContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_condicionalelseif);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(T__7);
			setState(124);
			match(T__6);
			setState(125);
			match(T__3);
			setState(126);
			condicion(0);
			setState(127);
			match(T__4);
			setState(128);
			abrirll();
			setState(129);
			contenido();
			setState(130);
			cll();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionalforContext extends ParserRuleContext {
		public Token op;
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(TraductorParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TraductorParser.ID, i);
		}
		public AbrirllContext abrirll() {
			return getRuleContext(AbrirllContext.class,0);
		}
		public ContenidoContext contenido() {
			return getRuleContext(ContenidoContext.class,0);
		}
		public CllContext cll() {
			return getRuleContext(CllContext.class,0);
		}
		public ExpressContext express() {
			return getRuleContext(ExpressContext.class,0);
		}
		public TerminalNode INT() { return getToken(TraductorParser.INT, 0); }
		public CondicionalforContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicionalfor; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitCondicionalfor(this);
			else return visitor.visitChildren(this);
		}
	}
